force-app/main/default/objects/Clear_Api_Config__c/Clear_Api_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Clear Api Config</label>
</CustomObject>