force-app/main/default/objects/Clear_Api_Config__c/fields/Production_Client_Certificate_Name__c.field-meta.xml
<CustomField>
    <fullName>Production_Client_Certificate_Name__c</fullName>
    <label>Production Client Certificate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>