force-app/main/default/objects/Clear_Api_Config__c/fields/Production_Username__c.field-meta.xml
<CustomField>
    <fullName>Production_Username__c</fullName>
    <label>Production Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>