force-app/main/default/objects/Clear_Api_Config__c/fields/Sandbox_Client_Certificate_Name__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Client_Certificate_Name__c</fullName>
    <label>Sandbox Client Certificate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>