force-app/main/default/objects/Clear_Api_Config__c/fields/Sandbox_Password__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Password__c</fullName>
    <label>Sandbox Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>